--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "gitHead": "983daf4827399a19ed85742927c0bf3775c47d5d",
   "readmeFilename": "README.md",
   "dependencies": {
-    "optimist": "~0.4.0"
+    "optimist": "~0.4.0",
+    "check-types": "~0.6.3"
   }
 }
