--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "index.js",
   "scripts": {
     "test": "node ./node_modules/gt test/e2e.js",
-    "basic": "node index.js -i examples/basic/index.html"
+    "basic": "node index.js -i examples/basic/index.html -o"
   },
   "pre-commit": "npm test",
   "repository": {
