--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   },
   "devDependencies": {
     "gt": "0.8.33",
-    "pre-git": "0.0.13"
+    "pre-git": "0.0.13",
+    "jshint-stylish": "~0.1.5",
+    "gulp-jshint": "~1.3.4",
+    "gulp": "~3.5.0"
   }
 }
