--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "clean-console",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Quickly loads remote url in phantomjs to check of JavaScript console errors",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "test": "node ./node_modules/gt test/e2e.js",
-    "basic": "node index.js -i examples/basic/index.html -o"
+    "test": "gulp && npm run unit && npm run e2e",
+    "basic": "node index.js -i examples/basic/index.html -o",
+    "unit": "node node_modules/gt test/test.js",
+    "e2e": "node node_modules/gt test/e2e.js"
   },
   "pre-commit": [
     "gulp",
@@ -35,7 +37,8 @@
     "optimist": "0.6.0",
     "check-types": "1.1.1",
     "console.json": "~0.1.1",
-    "update-notifier": "~0.1.7"
+    "update-notifier": "~0.1.7",
+    "q": "~1.0.0"
   },
   "devDependencies": {
     "gt": "0.8.33",
