--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
   "gitHead": "983daf4827399a19ed85742927c0bf3775c47d5d",
   "readmeFilename": "README.md",
   "dependencies": {
-    "optimist": "0.6.0",
-    "check-types": "1.1.1",
+    "check-types": "1.4.0",
     "console.json": "~0.1.1",
-    "update-notifier": "~0.1.7",
-    "q": "~1.0.0"
+    "optimist": "0.6.1",
+    "q": "1.1.2",
+    "update-notifier": "0.1.10"
   },
   "devDependencies": {
-    "gt": "0.8.33",
-    "pre-git": "0.0.15",
-    "jshint-stylish": "~0.1.5",
-    "gulp-jshint": "~1.3.4",
-    "gulp": "~3.5.0"
+    "gt": "0.8.47",
+    "gulp": "3.8.10",
+    "gulp-jshint": "1.9.0",
+    "jshint-stylish": "1.0.0",
+    "pre-git": "0.1.1"
   }
 }
