--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "readmeFilename": "README.md",
   "dependencies": {
     "check-types": "1.4.0",
-    "console.json": "~0.1.1",
+    "console.json": "0.1.2",
     "optimist": "0.6.1",
     "q": "2.0.2",
     "update-notifier": "0.1.10"
