added --expect option, fixes #14

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "clean-console",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Quickly loads remote url in phantomjs to check of JavaScript console errors",
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
     "test": "gulp && npm run unit && npm run e2e",
     "basic": "node index.js -i examples/basic/index.html -o",
-    "unit": "node node_modules/gt test/test.js",
-    "e2e": "node node_modules/gt test/e2e.js"
+    "unit": "gt test/test.js",
+    "e2e": "gt test/e2e.js --output"
   },
   "pre-commit": [
     "gulp",
@@ -39,6 +39,7 @@
     "console.json": "0.2.1",
     "optimist": "0.6.1",
     "q": "2.0.3",
+    "quote": "0.4.0",
     "update-notifier": "0.1.10"
   },
   "devDependencies": {
