--- a/package.json
+++ b/package.json
@@ -5,22 +5,15 @@
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "test": "gulp && npm run unit && npm run e2e",
+    "pretest": "gulp",
+    "test": "npm run unit",
+    "posttest": "npm run e2e",
     "basic": "node index.js -i examples/basic/index.html -o",
     "unit": "gt test/test.js",
     "e2e": "gt test/e2e.js --output",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "commit": "commit-wizard"
   },
-  "pre-commit": [
-    "gulp",
-    "npm test",
-    "npm version"
-  ],
-  "pre-push": [
-    "rm -rf node_modules",
-    "npm install",
-    "npm test"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/bahmutov/clean-console.git"
@@ -44,11 +37,23 @@
     "update-notifier": "0.1.10"
   },
   "devDependencies": {
-    "gt": "0.8.47",
+    "gt": "0.10.0",
     "gulp": "3.8.11",
     "gulp-jshint": "1.10.0",
     "jshint-stylish": "1.0.2",
-    "pre-git": "0.2.1",
+    "pre-git": "3.10.0",
     "semantic-release": "^4.3.5"
+  },
+  "config": {
+    "pre-git": {
+      "commit-msg": "simple",
+      "pre-commit": [
+        "npm test"
+      ],
+      "pre-push": [],
+      "post-commit": [],
+      "post-checkout": [],
+      "post-merge": []
+    }
   }
 }
