--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
   },
   "devDependencies": {
     "gt": "0.10.0",
-    "gulp": "3.8.11",
+    "gulp": "3.9.1",
     "gulp-jshint": "1.10.0",
-    "jshint-stylish": "1.0.2",
+    "jshint-stylish": "2.2.0",
     "pre-git": "3.10.0",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "6.3.0"
   },
   "config": {
     "pre-git": {
